# codex-island

./: .gitignore  README.md  index.html  package.json  pnpm-lock.yaml  vite.config.ts
.codex/environments/: environment.toml
.github/workflows/: release.yml  tauri-desktop.yml
_codex/: AGENTS.md  CURRENT_TASK.md  DECISIONS.md  PROJECT_MAP.md
docs/: macos-build.md
docs/releases/: v1.0.3.md  v1.0.4.md  v1.0.5.md
script/: build_and_run.sh
src/: main.tsx  overrides.css  styles.css
src-tauri/: Cargo.toml  tauri.conf.json  tauri.macos.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
